--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Basic Form</title>
+  <title>Contact Form</title>
 </head>
 <body>
   <h2>Contact Form</h2>
 
-  <form action="#" method="post">
+  <form id="contact-form">
     <label for="name">Name:</label><br>
     <input type="text" id="name" name="name" required><br><br>
 
@@ -19,5 +19,10 @@
     <input type="submit" value="Submit">
   </form>
 
+  <!-- 🧠 Clearout validation script -->
+  <script id="clearout-js-widget"
+          src="https://test.clearout.io/jswidget/9f09cf5dcaeb0de62f8a799360743b7a"
+          async>
+  </script>
 </body>
 </html>
