--- a/index.html
+++ b/index.html
@@ -7,15 +7,23 @@
   <h2>Contact Form</h2>
 
   <form id="contact-form">
+    <!-- Name Field -->
     <label for="name">Name:</label><br>
     <input type="text" id="name" name="name" required><br><br>
 
+    <!-- Primary Email Field -->
     <label for="email">Email:</label><br>
     <input type="email" id="email" name="email" required><br><br>
 
+    <!-- ✅ New Email Field (Example: Alternate Email) -->
+    <label for="alt_email">Alternate Email:</label><br>
+    <input type="email" id="alt_email" name="alt_email" required><br><br>
+
+    <!-- Phone Number Field -->
     <label for="phone">Phone Number:</label><br>
     <input type="tel" id="phone" name="phone" pattern="[0-9]{10}" required><br><br>
 
+    <!-- Submit Button -->
     <input type="submit" value="Submit">
   </form>
 
