--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <input type="email" id="email" name="email" required><br><br>
 
     <!-- ✅ New Email Field (Example: Alternate Email) -->
-    <label for="alt_email">User Email:</label><br>
+    <label for="alt_email">User Email:(not mandatory)</label><br>
     <input type="email" id="alt_email" name="alt_email" required><br><br>
 
     <!-- Phone Number Field -->
