--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- ✅ New Email Field (Example: Alternate Email) -->
     <label for="alt_email">User Email:(not mandatory)</label><br>
-    <input type="email" id="alt_email" name="alt_email" required><br><br>
+    <input type="text" id="alt_email" name="alt_email" required><br><br>
 
     <!-- Phone Number Field -->
     <label for="phone">Phone Number:</label><br>
