--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
 
     <!-- Primary Email Field -->
     <label for="email">Email:</label><br>
-    <input type="email" id="email" name="email" required><br><br>
-
-    <!-- ✅ New Email Field (Example: Alternate Email) -->
-    <label for="alt_email">User Email:(not mandatory)</label><br>
-    <input type="text" id="alt_email" name="alt_email" required><br><br>
+    <input type="text" id="email" name="email" required><br><br>
 
     <!-- Phone Number Field -->
     <label for="phone">Phone Number:</label><br>
