--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <input type="text" id="name" name="name" required><br><br>
 
     <!-- Primary Email Field -->
-    <label for="email">Email:</label><br>
+    <label for="text">Email:</label><br>
     <input type="text" id="email" name="email" required><br><br>
 
     <!-- Phone Number Field -->
