--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <input type="text" id="name" name="name" required><br><br>
 
     <!-- Primary Email Field -->
-    <label for="text">Email:</label><br>
-    <input type="text" id="email" name="email" required><br><br>
+    <label for="email">Email:</label><br>
+    <input type="text" id="text" name="text" required><br><br>
 
     <!-- Phone Number Field -->
     <label for="phone">Phone Number:</label><br>
