--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- Primary Email Field -->
     <label for="text">Email:</label><br>
-    <input type="text" id="text" name="text" required><br><br>
+    <input type="text" id="email" name="text" required><br><br>
 
     <!-- Phone Number Field -->
     <label for="phone">Phone Number:</label><br>
@@ -23,10 +23,5 @@
     <input type="submit" value="Submit">
   </form>
 
-  <!-- 🧠 Clearout validation script -->
-  <script id="clearout-js-widget"
-          src="https://test.clearout.io/jswidget/9f09cf5dcaeb0de62f8a799360743b7a"
-          async>
-  </script>
 </body>
 </html>
