--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- Primary Email Field -->
     <label for="text">Email:</label><br>
-    <input type="text" id="email" name="text" required><br><br>
+    <input type="email" id="text" name="text" required><br><br>
 
     <!-- Phone Number Field -->
     <label for="phone">Phone Number:</label><br>
