--- a/index.html
+++ b/index.html
@@ -23,5 +23,7 @@
     <input type="submit" value="Submit">
   </form>
 
+  <!-- Clearout JS Widget -->
+  <script id="clearout-js-widget" src="https://test.clearout.io/jswidget/9f09cf5dcaeb0de62f8a799360743b7a" async></script>
 </body>
 </html>
