--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <input type="tel" id="phone" name="phone" pattern="[0-9]{10}" required><br><br>
 
     <!-- Submit Button -->
-    <button type="submit">Submit</button>
+    <button type="text">Submit</button>
   </form>
 
   <!-- ✅ Clearout Validation Script -->
