--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Contact Form with Clearout + Google reCAPTCHA v3</title>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <title>Contact Form with Clearout Validation</title>
 </head>
 <body>
   <h2>Contact Form</h2>
@@ -20,8 +19,7 @@
     <button type="submit">Submit</button>
   </form>
 
-  <!-- Clearout Validation Script -->
-  <script id="clearout-js-widget" src="https://test.clearout.io/jswidget/9f09cf5dcaeb0de62f8a799360743b7a" async></script>
+  <script id="clearout-js-widget" src="https://test.clearout.io/jswidget/d0f2d608c68f37afa316e1f92f686ec0" async></script>
 
 </body>
 </html>
