--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <button type="submit">Submit</button>
   </form>
 
-  <script id="clearout-js-widget" src="https://test.clearout.io/jswidget/d0f2d608c68f37afa316e1f92f686ec0" async></script>
+<script id="clearout-js-widget" src="https://clearout.io/jswidget/d0f2d608c68f37afa316e1f92f686ec0" async></script>
 
 </body>
 </html>
