--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <button type="submit">Submit</button>
   </form>
 
-<script id="clearout-js-widget" src="https://test.clearout.io/jswidget/d0f2d608c68f37afa316e1f92f686ec0" async></script></body>
+  <!-- Clearout Validation Script -->
+  <script id="clearout-js-widget" src="https://test.clearout.io/jswidget/f18ee95ec5cd7f4e666661e59349a027" async></script>
+</body>
 </html>
-
