--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
   <form id="contact-form">
     <label for="name">Name:</label><br>
-    <input type="text" id="name" name="name" required><br><br>
+    <input type="text" id="text" name="text" required><br><br>
 
     <label for="email">Email:</label><br>
     <input type="email" id="email" name="email" required><br><br>
 
     <label for="phone">Phone Number:</label><br>
-    <input type="tel" id="phone" name="phone" pattern="[0-9]{10}" required><br><br>
+    <input type="text" id="phone" name="text" pattern="[0-9]{10}" required><br><br>
 
     <button type="submit">Submit</button>
   </form>
